--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8085
-spring.datasource.url=jdbc:mysql://localhost:3306/bank?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/ebanking?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
